First attempt at fixing dark mode with cookie

--- a/src/main/resources/static/css/dark.css
+++ b/src/main/resources/static/css/dark.css
@@ -36,7 +36,7 @@
     --bs-info-rgb: 23, 162, 184;
     --bs-warning-rgb: 243, 156, 18;
     --bs-danger-rgb: 231, 76, 60;
-    --bs-light-rgb: 158, 158, 158;
+    --bs-light-rgb: 120, 120, 120;
     --bs-dark-rgb: 59, 59, 59;
     --bs-white-rgb: 250, 250, 250;
     --bs-black-rgb: 17, 17, 17;
